--- a/main.css
+++ b/main.css
@@ -140,21 +140,6 @@ body {
           animation: btn_ring 2s linear infinite;
 }
 
-.container .loader_widget .loader_content button::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: -2px;
-  left: -2px;
-  border: 2px solid #7ed6d4;
-  border-radius: 50%;
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-  -webkit-animation: btn_ring 1.7s linear infinite;
-          animation: btn_ring 1.7s linear infinite;
-}
-
 .container .loader_widget .loader_content .content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -211,6 +196,14 @@ body {
     top: -32px;
     left: -32px;
     opacity: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
