--- a/main.scss
+++ b/main.scss
@@ -91,18 +91,18 @@ body {
           border-radius: 50%;
           animation: btn_ring 2s linear infinite;
         }
-        &::after {
-          position: absolute;
-          content: "";
-          width: 100%;
-          height: 100%;
-          top: -2px;
-          left: -2px;
-          border: 2px solid #7ed6d4;
-          border-radius: 50%;
-          animation-delay: 0.3s;
-          animation: btn_ring 1.7s linear infinite;
-        }
+        // &::after {
+        //   position: absolute;
+        //   content: "";
+        //   width: 100%;
+        //   height: 100%;
+        //   top: -2px;
+        //   left: -2px;
+        //   border: 2px solid #7ed6d4;
+        //   border-radius: 50%;
+        //   animation-delay: 0.3s;
+        //   animation: btn_ring 1.7s linear infinite;
+        // }
       }
       .content {
         display: flex;
@@ -134,5 +134,12 @@ body {
       left: -32px;
       opacity: 0;
     }
+  }
+}
+@media (max-width:450px){
+  .container{
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 }
