--- a/main.css
+++ b/main.css
@@ -204,6 +204,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
+    margin-top: 50px;
   }
 }
 /*# sourceMappingURL=main.css.map */
