--- a/main.scss
+++ b/main.scss
@@ -129,6 +129,8 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    margin-top: 150px;
+    h2{
+      margin-top: 150px;
+    }
   }
 }
