--- a/main.css
+++ b/main.css
@@ -204,9 +204,9 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-  }
-  .container h2 {
-    margin-top: 100px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 /*# sourceMappingURL=main.css.map */
