--- a/main.scss
+++ b/main.scss
@@ -129,8 +129,6 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    h2{
-      margin-top: 100px;
-    }
+    justify-content: center;
   }
 }
