--- a/main.css
+++ b/main.css
@@ -204,6 +204,12 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
